--- a/index.html
+++ b/index.html
@@ -452,10 +452,9 @@
                                 <ul class="myDesc">
                                     <li>Advanced Algorithms for Big Tech Interviews</li>
                                     <li>Data-Structure functioning </li>
-                                    <li>Communicated, co-ordinated and contacted large companies such as Cooler Master,
-                                        Zowie by BenQ, Circle Gaming, USports and Entity Gaming.</li>
-                                    <li>Supervised technical operations of video games in “U CYPHER SEASON 1” TV show
-                                        telecasted on MTV India.</li>
+                                    <li>Small Project that  Automate trade using Intrade API with XML processing.  </li>
+                                    <li>Implemented a GUI using wxPython library to manage multiple threads for background </li>
+                                   
                                 </ul>
                             </div>
                         </div>
