--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <li>SquareSpace</li>
                         </ul>
                         <div class="">
-                            <p id="gobtn"><a href="media/CV NAV.pdf" class="button">Download CV</a></p>
+                            <p id="gobtn"><a href="media/Nav-software-resume.pdf" class="button">Download CV</a></p>
                         </div>
                     </div>
                 </div>
@@ -510,7 +510,7 @@
                         <!-- timeline item -->
                         <div class="timeline-container" data-aos="fade-up">
                             <div class="content">
-                                <span class="time">June 2017 - May 2019</span>
+                                <span class="time">May 2019 - June 2019</span>
                                 <h3 class="title">Vector Marketing</h3>
                                 <p class="myRole">Sales Representative</p>
                                 <ul class="myDesc">
@@ -526,7 +526,7 @@
 
                         <div class="timeline-container" data-aos="fade-up">
                             <div class="content">
-                                <span class="time">June 2017 - May 2019</span>
+                                <span class="time">July 2019 - August 2019</span>
                                 <h3 class="title">Mechanic</h3>
                                 <p class="myRole">Service Technician</p>
                                 <ul class="myDesc">
@@ -556,7 +556,7 @@
                         <!-- timeline item -->
                         <div class="timeline-container" data-aos="fade-up">
                             <div class="content">
-                                <span class="time">May 2020 - August 2020</span>
+                                <span class="time">September 2019 - Present</span>
                                 <h3 class="title">Shawrama Corner</h3>
                                 <p class="myRole">Manager</p>
                                 <ul class="myDesc">
@@ -571,7 +571,7 @@
                         <!-- timeline item -->
                         <div class="timeline-container" data-aos="fade-up">
                             <div class="content">
-                                <span class="time">July 2017 - February 2019</span>
+                                <span class="time">May 2016 - Present</span>
                                 <h3 class="title">Freelancer</h3>
                                 <p class="myRole">Full Stack Developer</p>
                                 <ul class="myDesc">
@@ -1430,7 +1430,7 @@
                         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
                             <div class="service h-100" data-aos="fade-up" data-aos-duration="3000ms">
                                 <span class="icon-pencil display-4 text-primary d-block mb-4"></span>
-                                <h3>FANART (Digital Drawing)</h3><br>
+                                <h3>DIGITAL DRAWING</h3><br>
                                 <p><img src="media/fanart.PNG" alt="" style="height:280px; width: 300px;"></p>
                             </div>
                         </div>
