--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                 <div class="col-md-5 ml-auto img-overlap">
                     <div class="img-1"><img src="media/1.JPG" alt="Image" class="img-fluid img-shadow"></div>
                     <div class="img-2"><img src="media/1.JPG" alt="Image" class="img-fluid img-shadow"></div>
+                    <div class="img-3"><img src="media/Navjot2.jpg" alt="Image" class="img-fluid img-shadow"></div>
                 </div>
             </div>
         </div>
