--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                 </div>
                 <div class="col-md-5 ml-auto img-overlap">
-                    <div class="img-1"><img src="media/1.JPG" alt="Image" class="img-fluid img-shadow"></div>
+                    <div class="img-1"><img src="media/Navjot2.jpg" alt="Image" class="img-fluid img-shadow"></div>
                     <div class="img-2"><img src="media/1.JPG" alt="Image" class="img-fluid img-shadow"></div>
                 </div>
             </div>
