--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                             <div class="content">
                                 <span class="time">September 2019 - Present</span>
                                 <h3 class="title">Shawrama Corner</h3>
-                                <p class="myRole">Manager</p>
+                                <p class="myRole">Assistant Manager</p>
                                 <ul class="myDesc">
                                     <li>accountable for ensuring the successful operation</li>
                                     <li>strong service skills and handling cash</li>
