--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <li>SquareSpace</li>
                         </ul>
                         <div class="">
-                            <p id="gobtn"><a href="media/Nav-software-resume.pdf" class="button">Download CV</a></p>
+                            <p id="gobtn"><a href="media/resume-IT.pdf" class="button">Download CV</a></p>
                         </div>
                     </div>
                 </div>
