--- a/index.html
+++ b/index.html
@@ -1372,6 +1372,27 @@
         </div>
     </div>
 
+    <!-- ************************************************************************************************************************** -->
+    <div class="tab-content container" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="row" style="margin-top: 50px; margin-bottom: 50px; overflow: hidden;">
+                <div class="col-12" style="position: relative; top: 0; overflow: hidden;">
+                    <video class="videoBG"  autoplay muted loop>
+                        <source src="/portfolio/media/hello2.mp4" type="video/mp4">
+                    </video>
+                    <div class="pro-flipkart" >
+                        <h1 id="header-flip" >Flipkart Clone</h1>  
+                    </div>
+                    <div class="pro-flip" >
+                        <p id="gobtn-flip"><a href="https://the-flipkart.herokuapp.com/" class="button-flip">View Website</a></p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+ 
+
 
     <!-- *********************************************************************************************************** -->
 
