--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
             <div class="row" style="margin-top: 50px; margin-bottom: 50px; overflow: hidden;">
                 <div class="col-12" style="position: relative; top: 0; overflow: hidden;">
                     <video class="videoBG"  autoplay muted loop>
-                        <source src="/portfolio/media/hello2.mp4" type="video/mp4">
+                        <source src="media/hello2.mp4" type="video/mp4">
                     </video>
                     <div class="pro-flipkart" >
                         <h1 id="header-flip" >Flipkart Clone</h1>  
