--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,6 @@
                     <h5 class="modal-title" id="exampleModalLongTitle89">HTML/CSS PROJECTS</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <!-- <span aria-hidden="true">&times;</span> -->
-
                         <div class="outer">
                             <div class="inner">
                                 <label>Back</label>
@@ -1372,6 +1371,59 @@
         </div>
     </div>
 
+
+
+    <!-- Modal 777777777777 -->
+    <div class="modal fade" id="exampleModalLong7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content " id="flip-mini">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle89">FLIPKART CLONE</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <!-- <span aria-hidden="true">&times;</span> -->
+                        <div class="outer">
+                            <div class="inner">
+                                <label>Back</label>
+                            </div>
+                        </div>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <ul class="list-unstyled">
+                        <li class="skills-style"></li>
+                        <p>Flipkart is an e-commerce website, inspired by Indian e-commerce, developed at the top of the MERN stack. It has both the Customer & Admin portal, which means that not only does this website allow customers to buy products, but it also enables businesses to set up a vendor account on the platform..
+                            
+                            </p>
+                        <li class="skills-style"> Features </li>
+                        <p>
+                            1) Offline - Online Sync cart<br>
+                            2) Google Sign In<br>
+                            3) Full-text product search engine<br>
+                            4) Product Recommendations<br>
+                            5) Seller Account<br><br>   
+
+                            Full Stack Development:<br>
+                            Database Design | API | Website Optimization | Commerce Website<br><br>
+                            
+                            Full Stack Development skills<br>
+                            Google Analytics | Redux | React | Node.js | eCommerce | Express<br><br>
+
+                            Frontend Design Tools:<br>
+                            Ant Design | Javascript Animations | Custom Ract Components<br><br>
+
+                            Database:<br>
+                            MongoDB<br><br>
+                        </p>
+                    </ul>                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="modal-btn" data-dismiss="modal">Close Project</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- ************************************************************************************************************************** -->
     <div class="tab-content container" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
@@ -1384,6 +1436,10 @@
                         <h1 id="header-flip" >Flipkart Clone</h1>  
                     </div>
                     <div class="pro-flip" >
+                        <button type="button" class="btn btn-primary button-flip" data-toggle="modal"
+                            data-target="#exampleModalLong7">
+                        What is Flipkart ?
+                        </button>
                         <p id="gobtn-flip"><a href="https://the-flipkart.herokuapp.com/" class="button-flip">View Website</a></p>
                     </div>
 
