update flipkart clone

--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@
                             data-target="#exampleModalLong7">
                             What is Flipkart ?
                         </button>
-                        <p id="gobtn-flip"><a href="https://the-flipkart.herokuapp.com/" class="button-flip">View
+                        <p id="gobtn-flip"><a href="https://flipkart-clonee.herokuapp.com/" class="button-flip">View
                                 Website</a></p>
                     </div>
 
