updates skillset, posiytion

--- a/index.html
+++ b/index.html
@@ -294,13 +294,19 @@
                             optimising them to provide <br> best and Enriched User Experience </p>
                         <p>My Skill Set:</p>
                         <ul>
-                            <li>React/Angular/Javascript</li>
+                            <li>React/Angular/Javascript/Node.js</li>
                             <li>Java</li>
                             <li>Django</li>
                             <li>Python</li>
                             <li>HTML5</li>
                             <li>CSS3/SCSS</li>
+                            <li>Rest APIs</li>
+                            <li>AWS</li>
+                            <li>MongoDB</li>
+                            <li>MySQL</li>
+                            <li>PostGreSQL</li>
                             <li>SquareSpace</li>
+
                         </ul>
                         <div class="">
                             <p id="gobtn"><a href="media/Navjot-Singh.pdf" class="button">Download CV</a></p>
@@ -563,7 +569,7 @@
                             <div class="content">
                                 <span class="time">August 2019 - Present</span>
                                 <h3 class="title">Shawrama Corner</h3>
-                                <p class="myRole">Assistant Manager</p>
+                                <p class="myRole">Team Member</p>
                                 <ul class="myDesc">
                                     <li>accountable for ensuring the successful operation</li>
                                     <li>strong service skills and handling cash</li>
