--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                         <!-- timeline item -->
                         <div class="timeline-container" data-aos="fade-up">
                             <div class="content">
-                                <span class="time">January 2021 - Present</span>
+                                <span class="time">January 2021 - May 2021</span>
                                 <h3 class="title">TMRRW INC</h3>
                                 <p class="myRole">Full Stack Web Developer</p>
 
